# fish

./: README.md  meson.build
code/: meson.build
code/logic/: ask.c  augment.c  chat.c  clean.c  create.c  delete.c  export.c  import.c  inspect.c  load.c  meson.build  preprocess.c  save.c  split.c  stats.c  summary.c  test.c  train.c
code/logic/fossil/code/: app.h  commands.h
code/tests/cases/: test_sample.c
subprojects/: fossil-io.wrap  fossil-media.wrap
